@@ -41,6 +41,9 @@ RELEASE 0.96.96 - XXX
 
   - Fix handling nested lists within $CPPPATH, $LIBPATH, etc.
 
+  - Fix a "builders_used" AttributeError that real-world Qt initialization
+    triggered in the refactored suffix handling for Builders.
+
   - User Guide updates: --random, AlwaysBuild(), --tree=,
     --debug=presub, --debug=stacktrace.
 
